@@ -13,6 +13,17 @@
 
 YYYY/MM/DD
 ============================================================================
+2004/05/17	(2.6.10)
+
+* Bug Fixes:
+
+    Bug ID  Summary
+    ------  ------------------------------------------------------------
+     8982   Can't use global $1 in "my" at base64.pl
+    ------  ------------------------------------------------------------
+    <https://savannah.nongnu.org/bugs/?group=mhonarc>
+
+============================================================================
 2004/05/07	(2.6.9)
 
 * Bug Fixes:
@@ -2613,4 +2624,4 @@ YYYY/MM/DD
 
 =======================================================================
 Earl Hood, mhonarc@mhonarc.org
-$Id: CHANGES,v 1.124 2004/05/07 22:56:36 ehood Exp $
+$Id: CHANGES,v 1.125 2004/05/17 05:17:51 ehood Exp $
